# pyllelic

./: .darglint  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  meta.yaml  pyllelic.py  pyllelic_binder_example.ipynb  pyllelic_class_notebook.md  pyllelic_notebook.ipynb  pyllelic_notebook.md  pyllelic_notebook2.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  codeql.yml
assets/: tert_genome.txt
assets/test/: fh_22RV1_chr5.bam  fh_22RV1_chr5.bam.bai  fh_U87_chr5.bam  fh_U87_chr5.bam.bai
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyllelic.html  search.html  searchindex.js
docs/_modules/: index.html  pathlib.html
docs/_modules/pyllelic/: __main__.html  config.html  process.html  pyllelic.html  quma.html  visualization.html
docs/_sources/: index.rst.txt  modules.rst.txt  pyllelic.rst.txt
docs/_static/: documentation_options.js
notebooks/: fixing_best_match.ipynb  more_stats_tests.ipynb  pyllelic_binder_example.ipynb  pyllelic_notebook.ipynb
pyllelic/: __init__.py  __main__.py  __version__.py  config.py  guillelic.py  methyl_level.py  process.py  pyllelic.py  pyllelic_class.py  quma.py  quma_class.py  visualization.py
recipe/: meta.yaml
tests/: bam_input.py  inputs.py  test__main.py  test_process.py  test_pyllelic.py  test_quma.py  test_visualization.py
